# rainbowdrinkinggame

./: .pylintrc  404.html  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  output.html  poetry.toml  pyproject.toml
.github/workflows/: code_quality_checks.yml
Sphinx-docs/: conf.py  index.rst  rainbowdrinkinggame.rst  tests.rst
Sphinx-docs/_build/doctrees/: environment.pickle  index.doctree  rainbowdrinkinggame.doctree  tests.doctree
Sphinx-docs/_build/markdown/: index.md
docs/: index.md
docs/rules/: basic.md
rainbowdrinkinggame/: __init__.py  rainbowdrinkinggame.py  utils.py  view.qml
rules/basic/: index.html
search/: search_index.json
tests/: test_rainbowdrinkinggame.py  test_utils.py
