[tool]

[tool.poetry]
name = "rainbowdrinkinggame"
version = "0.0.0"
homepage = "https://github.com/makanu/rainbowdrinkinggame"
description = "A small pyqt app for a drinking game. You need Rainbowsix Siege to play accurate ;)."
authors = ["Matti Kaupenjohann <matti.kaupenjohann@fh-dortmund.de>"]
readme = "README.md"
license =  "GPL-3.0-only"
classifiers=[
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Natural Language :: English',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
include = [
    "LICENSE",
    "rainbowdrinkinggame/py.typed"
]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
importlib_metadata = "^4.4.0"
PySide6 = "6.2.3"
Markdown = "^3.3.6"

[tool.poetry.dev-dependencies]
mkdocs-material = "^6.1.5"
pytest = "^6.0"
pytest-cov = "^2.10.1"

pylint = "^2.6.0"
black = "20.8b1"
mypy = "0.790"
pyfakefs = "^4.5.6"
html5lib = "^1.1"
pydoc-markdown = "^4.6.3"
pytest-qt = "^4.0.2"
pytest-mock = "^3.7.0"

[tool.black]
line-length=100

[tool.pylint.reports]
output-format="colorized"
reports="y"
include-ids="yes"
msg-template="{msg_id}:{line:3d},{column}: {obj}: {msg}"

[tool.pytest.ini_options]
addopts = "--cov=rainbowdrinkinggame --cov-branch --cov-report term-missing  -vv --color=yes --cov-fail-under 100"
python_files = "tests.py test_*.py *_tests.py"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
